build_log_v3.txt
warning: `C:\Users\nalum\nih-plug-projects\dtcwpt_morph\.cargo\config` is deprecated in favor of `config.toml`
  |
  = help: if you need to support cargo 1.38 or earlier, you can symlink `config` to `config.toml`
    Checking dtcwpt_morph v0.1.0 (C:\Users\nalum\nih-plug-projects\dtcwpt_morph)
error[E0434]: can't capture dynamic environment in a fn item
   --> src\editor.rs:328:13
    |
328 |             painter.circle_filled(pos, 8.0, ACCENT_COLOR.gamma_multiply(0.2));
    |             ^^^^^^^
    |
    = help: use the `|| { ... }` closure form instead

warning: unused import: `nih_plug_egui::EguiState`
 --> src\lib.rs:2:5
  |
2 | use nih_plug_egui::EguiState;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Shape`
 --> src\editor.rs:4:97
  |
4 | use nih_plug_egui::egui::{self, Color32, RichText, Rect, Pos2, Stroke, CornerRadius, UiBuilder, Shape};
  |                                                                                                 ^^^^^

warning: unused variable: `painter`
   --> src\editor.rs:246:9
    |
246 |     let painter = ui.painter();
    |         ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_painter`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `node_radius`
   --> src\editor.rs:248:9
    |
248 |     let node_radius = 6.0;
    |         ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_node_radius`

warning: unused variable: `is_pure_h`
   --> src\processor.rs:352:17
    |
352 | ...   let is_pure_h = dest == 3 || (dest > 1 && (dest & (dest + 1)) == 0 && dest.count_ones() == (dest.trailing_ones())); // Pure H path:...
    |           ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_is_pure_h`

warning: unused variable: `node_ids`
   --> src\processor.rs:539:5
    |
539 |     node_ids: &[usize],
    |     ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_node_ids`

For more information about this error, try `rustc --explain E0434`.
warning: `dtcwpt_morph` (lib) generated 6 warnings
error: could not compile `dtcwpt_morph` (lib) due to 1 previous error; 6 warnings emitted
